--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -27,7 +27,7 @@
   height: 20px;
   position: absolute;
   top: 71px;
-  right: 37px;
+  right: 20px;
   display: none;
 }
 .hamburger-line {
